# mcp-lightrag

./: .gitignore  README.md  openapi.json  pyproject.toml
src/mcp_lightrag/: __init__.py  api_client.py  cli.py  exceptions.py  mcp_tools.py  models.py  settings.py
src/mcp_lightrag/client/light_rag_server_api_client/api/default/: get_auth_status_auth_status_get.py  get_status_health_get.py  login_login_post.py  redirect_to_webui_get.py
src/mcp_lightrag/client/light_rag_server_api_client/api/documents/: cancel_pipeline_documents_cancel_pipeline_post.py  clear_cache_documents_clear_cache_post.py  clear_documents_documents_delete.py  delete_document_documents_delete_document_delete.py  delete_entity_documents_delete_entity_delete.py  delete_relation_documents_delete_relation_delete.py  documents_documents_get.py  get_document_status_counts_documents_status_counts_get.py  get_documents_paginated_documents_paginated_post.py  get_pipeline_status_documents_pipeline_status_get.py  get_track_status_documents_track_status_track_id_get.py  insert_text_documents_text_post.py  insert_texts_documents_texts_post.py  (+3 more)
src/mcp_lightrag/client/light_rag_server_api_client/models/: __init__.py  body_login_login_post.py  body_upload_to_input_dir_documents_upload_post.py  cancel_pipeline_response.py  cancel_pipeline_response_status.py  clear_cache_request.py  clear_cache_response.py  clear_cache_response_status.py  clear_documents_response.py  clear_documents_response_status.py  delete_doc_by_id_response.py  delete_doc_by_id_response_status.py  delete_doc_request.py  delete_entity_request.py  delete_relation_request.py  deletion_result.py  deletion_result_status.py  doc_status.py  doc_status_response.py  doc_status_response_metadata_type_0.py  docs_statuses_response.py  docs_statuses_response_statuses.py  documents_request.py  documents_request_sort_direction.py  documents_request_sort_field.py  entity_create_request.py  entity_create_request_entity_data.py  entity_merge_request.py  entity_update_request.py  entity_update_request_updated_data.py  insert_response.py  insert_response_status.py  insert_text_request.py  insert_texts_request.py  paginated_docs_response.py  paginated_docs_response_status_counts.py  pagination_info.py  pipeline_status_response.py  pipeline_status_response_update_status_type_0.py  query_data_query_data_post_response_400.py  (+23 more)
tests/: test_api_client.py  test_api_client_integration.py  test_find_document.py  test_mcp_server.py  test_settings.py  test_upsert_doc.txt  test_upsert_document.py
(+18 files in other folders)
