[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_lightrag"
version = "0.2.0"
description = "MCP Server for LightRAG"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "enriquecatala", email = "enrique@enriquecatala.com"},
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11",
    "python-dotenv>=1.0.1",
    "attrs>=25.3.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "ruff>=0.11.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[project.scripts]
mcp-lightrag = "mcp_lightrag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_lightrag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: mark test as integration test requiring running LightRAG server"
]
