[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-lightrag"
version = "0.2.1"
description = "MCP Server for LightRAG with smart document upsert capabilities"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Enrique Catala", email = "enrique@enriquecatala.com"},
]
license = {text = "MIT"}
keywords = ["mcp", "lightrag", "rag", "ai", "llm", "knowledge-graph", "agent", "obsidian", "context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11",
    "python-dotenv>=1.0.1",
    "attrs>=25.3.0"
]

[project.urls]
Homepage = "https://enriquecatala.com/"
Repository = "https://github.com/enriquecatala/mcp-lightrag"
Issues = "https://github.com/enriquecatala/mcp-lightrag/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "ruff>=0.11.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "build",
    "twine"
]

[project.scripts]
mcp-lightrag = "mcp_lightrag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_lightrag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: mark test as integration test requiring running LightRAG server"
]
